--- a/ISO8601.xcodeproj/xcshareddata/xcschemes/NJISO8601.xcscheme
+++ b/ISO8601.xcodeproj/xcshareddata/xcschemes/NJISO8601.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
+   LastUpgradeVersion = "0630"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CFB1B7FC1519734800176C89"
-               BuildableName = "ISO8601.app"
-               BlueprintName = "ISO8601"
+               BlueprintIdentifier = "2D4E76581B20C78D0087052E"
+               BuildableName = "NJISO8601.framework"
+               BlueprintName = "NJISO8601"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,8 +29,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "CFB1B81D1519734900176C89"
-               BuildableName = "ISO8601Tests.octest"
-               BlueprintName = "ISO8601Tests"
+               BuildableName = "NJISO8601Tests.octest"
+               BlueprintName = "NJISO8601Tests"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -47,8 +47,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "CFB1B81D1519734900176C89"
-               BuildableName = "ISO8601Tests.octest"
-               BlueprintName = "ISO8601Tests"
+               BuildableName = "NJISO8601Tests.octest"
+               BlueprintName = "NJISO8601Tests"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -56,9 +56,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CFB1B7FC1519734800176C89"
-            BuildableName = "ISO8601.app"
-            BlueprintName = "ISO8601"
+            BlueprintIdentifier = "2D4E76581B20C78D0087052E"
+            BuildableName = "NJISO8601.framework"
+            BlueprintName = "NJISO8601"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -72,16 +72,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CFB1B7FC1519734800176C89"
-            BuildableName = "ISO8601.app"
-            BlueprintName = "ISO8601"
+            BlueprintIdentifier = "2D4E76581B20C78D0087052E"
+            BuildableName = "NJISO8601.framework"
+            BlueprintName = "NJISO8601"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -91,16 +90,15 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CFB1B7FC1519734800176C89"
-            BuildableName = "ISO8601.app"
-            BlueprintName = "ISO8601"
+            BlueprintIdentifier = "2D4E76581B20C78D0087052E"
+            BuildableName = "NJISO8601.framework"
+            BlueprintName = "NJISO8601"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
