--- a/ISO8601.xcodeproj/xcshareddata/xcschemes/NJISO8601.xcscheme
+++ b/ISO8601.xcodeproj/xcshareddata/xcschemes/NJISO8601.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0630"
+   LastUpgradeVersion = "0640"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "CFB1B81D1519734900176C89"
-               BuildableName = "NJISO8601Tests.octest"
+               BuildableName = "NJISO8601Tests.xctest"
                BlueprintName = "NJISO8601Tests"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
@@ -47,7 +47,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "CFB1B81D1519734900176C89"
-               BuildableName = "NJISO8601Tests.octest"
+               BuildableName = "NJISO8601Tests.xctest"
                BlueprintName = "NJISO8601Tests"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
