--- a/ISO8601.xcodeproj/xcshareddata/xcschemes/NJISO8601Tests.xcscheme
+++ b/ISO8601.xcodeproj/xcshareddata/xcschemes/NJISO8601Tests.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0630"
+   LastUpgradeVersion = "0640"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "CFB1B81D1519734900176C89"
-               BuildableName = "NJISO8601Tests.octest"
+               BuildableName = "NJISO8601Tests.xctest"
                BlueprintName = "NJISO8601Tests"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "CFB1B81D1519734900176C89"
-               BuildableName = "NJISO8601Tests.octest"
+               BuildableName = "NJISO8601Tests.xctest"
                BlueprintName = "NJISO8601Tests"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CFB1B81D1519734900176C89"
-            BuildableName = "NJISO8601Tests.octest"
+            BuildableName = "NJISO8601Tests.xctest"
             BlueprintName = "NJISO8601Tests"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CFB1B81D1519734900176C89"
-            BuildableName = "NJISO8601Tests.octest"
+            BuildableName = "NJISO8601Tests.xctest"
             BlueprintName = "NJISO8601Tests"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
@@ -80,7 +80,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CFB1B81D1519734900176C89"
-            BuildableName = "NJISO8601Tests.octest"
+            BuildableName = "NJISO8601Tests.xctest"
             BlueprintName = "NJISO8601Tests"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
