--- a/ISO8601.xcodeproj/xcshareddata/xcschemes/NJISO8601Mac.xcscheme
+++ b/ISO8601.xcodeproj/xcshareddata/xcschemes/NJISO8601Mac.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0640"
+   LastUpgradeVersion = "0630"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -9,14 +9,28 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2D4E76A91B20F3260087052E"
+               BuildableName = "NJISO8601Mac.framework"
+               BlueprintName = "NJISO8601Mac"
+               ReferencedContainer = "container:ISO8601.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CFB1B81D1519734900176C89"
-               BuildableName = "NJISO8601Tests.xctest"
-               BlueprintName = "NJISO8601Tests"
+               BlueprintIdentifier = "2D4E76B31B20F3260087052E"
+               BuildableName = "NJISO8601-macTests.xctest"
+               BlueprintName = "NJISO8601-macTests"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,15 +40,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Release">
+      buildConfiguration = "Debug">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CFB1B81D1519734900176C89"
-               BuildableName = "NJISO8601Tests.xctest"
-               BlueprintName = "NJISO8601Tests"
+               BlueprintIdentifier = "2D4E76B31B20F3260087052E"
+               BuildableName = "NJISO8601-macTests.xctest"
+               BlueprintName = "NJISO8601-macTests"
                ReferencedContainer = "container:ISO8601.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,9 +56,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CFB1B81D1519734900176C89"
-            BuildableName = "NJISO8601Tests.xctest"
-            BlueprintName = "NJISO8601Tests"
+            BlueprintIdentifier = "2D4E76A91B20F3260087052E"
+            BuildableName = "NJISO8601Mac.framework"
+            BlueprintName = "NJISO8601Mac"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -61,9 +75,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CFB1B81D1519734900176C89"
-            BuildableName = "NJISO8601Tests.xctest"
-            BlueprintName = "NJISO8601Tests"
+            BlueprintIdentifier = "2D4E76A91B20F3260087052E"
+            BuildableName = "NJISO8601Mac.framework"
+            BlueprintName = "NJISO8601Mac"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -79,9 +93,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CFB1B81D1519734900176C89"
-            BuildableName = "NJISO8601Tests.xctest"
-            BlueprintName = "NJISO8601Tests"
+            BlueprintIdentifier = "2D4E76A91B20F3260087052E"
+            BuildableName = "NJISO8601Mac.framework"
+            BlueprintName = "NJISO8601Mac"
             ReferencedContainer = "container:ISO8601.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
